@@ -617,6 +617,53 @@ table.ipaddresses tr[class*="hidden-"] {
 /* 	display: none; */
 }
 
+div.ip_vis {
+/* 	display: none; */
+}
+div.ip_vis span {
+	box-shadow: 0px 0px 3px #aaa;
+	border-radius:3px;
+	
+	border: 1px solid white;
+	
+	padding: 2px;
+	text-align: center;
+	font-size: 11px;
+	
+	margin-right: 8px;
+	margin-bottom: 8px;
+
+	width: 22px;
+	height: 18px;
+	
+	cursor: pointer;
+	
+	float: left;
+}
+div.ip_vis span[class*="ip-"] {
+/* 	text-shadow: 1px 1px 0px gray; */
+}
+div.ip_vis span.ip-9 {
+	background: rgba(128,128,128,0.03);
+	text-shadow: none;
+}
+div.ip_vis span.ip-0 {
+	background: #F59C99;
+	color: white;
+}
+div.ip_vis span.ip-1 {
+	background: #A9C9A4;
+	color: white;
+}
+div.ip_vis span.ip-2 {
+	background: #9AC0CD;
+	color: white;
+}
+div.ip_vis span.ip-3 {
+	background: #a9a9a9;
+	color: white;
+}
+
 
 /* pie graph legend */
 td.legendLabel {
@@ -663,7 +710,7 @@ table.slaves tr.success td {
 /* 	background: #f9f9f9 !important; */
 	
 	text-shadow: 1px 1px 1px white;
-	color: rgb(192, 192, 192);
+	color: #aaa;
 }
 
 .editIPAddress select {
